--- a/Views/SegaSaturn/UpdateSegaSaturn.cshtml
+++ b/Views/SegaSaturn/UpdateSegaSaturn.cshtml
@@ -18,8 +18,8 @@
     <label asp-for="Genre" class="control-label">Genre</label>
     <input type="text" name="Genre" class="form-control" value="@Model.Genre" />
 
-    <label asp-for="Raiting" class="control-label">Raiting</label>
-    <input type="text" name="Raiting" class="form-control" value="@Model.Raiting" />
+    <label asp-for="Rating" class="control-label">Rating</label>
+    <input type="text" name="Rating" class="form-control" value="@Model.Rating" />
 
     <label asp-for="NumberOfPlayers" class="control-label">"NumberOfPlayers"</label>
     <input type="number" step="1" name="NumberOfPlayers" class="form-control" value="@Model.NumberOfPlayers" />
