--- a/Views/SegaSaturn/ViewSegaSaturn.cshtml
+++ b/Views/SegaSaturn/ViewSegaSaturn.cshtml
@@ -1,10 +1,24 @@
 ﻿@model SegaSaturn
 
 <h3>@Model.Name Information</h3>
+
 @{
-    var base64 = Convert.ToBase64String(Model.BoxArt);
-    var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+
+    string base64 = "";
+    string imgSrc = "";
+    if (Model.BoxArt == null)
+    {
+        base64 = 0.ToString();
+        imgSrc = "/images/Default.png";
+    }
+    else
+    {
+         base64 = Convert.ToBase64String(Model.BoxArt);
+         imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+    }
+    
 }
+
 
 <table class="table">
     <tr>
@@ -28,6 +42,7 @@
         <td>@Model.NumberOfPlayers</td>
         <td>@Model.ReleaseDate</td>
         <td><img src="@imgSrc" /></td>
+        
     </tr>
 </table>
 
