Background Issues Fixed

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,12 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1><strong>The Sega Saturn Library</strong></h1>
+    <p><strong>A full database to help you organize, view and pick out which game sounds good for the day. Feel free to update the database. An empty case will automatically be generated 
+        for the main image of a new game created and I will either leave it empty if it is a homebrew or a rom hack or find the correct case and size accordingly to keep things 
+        clean. Plenty of update ideas for the future including back of the box text from each game, original trailers or gameplay footage if a trailer can't be found, a sort by 
+        feature for each category and a few fun ideas like a randomizer to help select a game to play based on your search specifications. Click on games to get started or enjoy 
+        the great Segata Sanshiro. If you wern't into the games, you can't deny this great advertising campaign.</strong>
+    </p>
 </div>
+<div style="text-align: center;"><iframe width="1200" height="675" src="https://www.youtube.com/embed/gIM_RgIBPdY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
