--- a/Views/SegaSaturn/Index.cshtml
+++ b/Views/SegaSaturn/Index.cshtml
@@ -1,5 +1,25 @@
 ﻿@model IEnumerable<SegaSaturn>
 
+<style>
+    .all {
+     z-index: 1;
+     position: fixed;
+     width: 500px;
+     height: 200px;
+     padding: 10px;
+     top: 5%;
+     left: 9%;
+     margin-top: -100px;  
+     margin-left: -250px;  
+     
+    }
+</style>
+
+<div class="all">
+    <img src="~/images/background4a.png" />
+    
+</div>
+
 <h2>Games</h2>
 
 
