--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,27 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<style>
+    .all {
+     z-index: 1;
+     position: fixed;
+     width: 500px;
+     height: 200px;
+     padding: 10px;
+     top: 5%;
+     left: 9%;
+     margin-top: -100px;  
+     margin-left: -250px;  
+     pointer-events: none;
+     
+     
+    }
+</style>
+
+<div class="all">
+    <img src="~/images/background4a.png" />
+
+</div>
 
 <div class="text-center">
     <h1><strong>The Sega Saturn Library</strong></h1>
