--- a/Views/SegaSaturn/InsertProduct.cshtml
+++ b/Views/SegaSaturn/InsertProduct.cshtml
@@ -1,4 +1,25 @@
 ﻿@model SegaSaturn
+<style>
+    .all {
+     z-index: 1;
+     position: fixed;
+     width: 500px;
+     height: 200px;
+     padding: 10px;
+     top: 5%;
+     left: 9%;
+     margin-top: -100px;  
+     margin-left: -250px;  
+     pointer-events: none;
+     
+     
+    }
+</style>
+
+<div class="all">
+    <img src="~/images/background4a.png" />
+
+</div>
 
 <h2>Create a New Game</h2>
 
