--- a/Views/SegaSaturn/ViewSegaSaturn.cshtml
+++ b/Views/SegaSaturn/ViewSegaSaturn.cshtml
@@ -1,5 +1,28 @@
 ﻿@model SegaSaturn
 
+<style>
+    .all {
+     z-index: 1;
+     position: fixed;
+     width: 500px;
+     height: 200px;
+     padding: 10px;
+     top: 5%;
+     left: 9%;
+     margin-top: -100px;  
+     margin-left: -250px;  
+     pointer-events: none;
+     
+     
+    }
+</style>
+
+<div class="all">
+    <img src="~/images/background4a.png" />
+    
+
+</div>
+
 <h3>@Model.Name Information</h3>
 
 @{
@@ -47,7 +70,10 @@
 </table>
 
 <div style="display: block">
-    <a href="/SegaSaturn/UpdateSegaSaturn/@Model.ID">Update this Game</a>
+    <!--<a href="/SegaSaturn/UpdateSegaSaturn/@Model.ID">Update this Game</a>-->
+    <button class="btn btn-primary" onclick="window.location.href='/SegaSaturn/UpdateSegaSaturn/@Model.ID';">
+        Update this Game
+    </button>
 </div>
 <br/>
 
@@ -56,6 +82,6 @@
     @using (Html.BeginForm("DeleteProduct", "SegaSaturn", "Post"))
     {
         <input type="hidden" asp-for="ID" value="@Model.ID" />
-        <input type="submit" onclick="return confirm('Are you sure?')" value="Delete this product" />
+        <input type="submit" class="btn btn-primary" onclick="return confirm('Are you sure?')" value="Delete this product" />
     }
 </div>
